--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,20 @@ body {
   background-color: silver;
 }
 
+hr {
+  display: block;
+  height: 2px;
+  border: 0;
+  border-top: 2px solid black;
+  margin: 1em 0;
+  padding: 0;
+}
+
 footer div {
   color: black;
 }
 
 footer a {
   color: white;
+  justify-content;
 }
